--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,6 +142,7 @@ add_executable(${PROJECT_NAME}_node src/${PROJECT_NAME}_node.cpp)
 add_executable(depth_node src/ras_group8_camerad_node.cpp)
 add_executable(blob_detector_node src/ras_group8_blob_detector_node.cpp)
 
+add_executable(get_color_values src/get_color_values.cpp)
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
@@ -162,6 +163,10 @@ add_executable(blob_detector_node src/ras_group8_blob_detector_node.cpp)
  )
 
  target_link_libraries(blob_detector_node
+   ${catkin_LIBRARIES}
+ )
+
+ target_link_libraries(get_color_values
    ${catkin_LIBRARIES}
  )
 
