--- a/package.xml
+++ b/package.xml
@@ -49,6 +49,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
+  <build_depend>rosbag</build_depend>
   <run_depend>OpenCV</run_depend>
   <run_depend>cv_bridge</run_depend>
   <run_depend>image_transport</run_depend>
@@ -58,6 +59,7 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>visualization_msgs</run_depend>
+  <run_depend>rosbag</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
