--- a/package.xml
+++ b/package.xml
@@ -40,7 +40,7 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>OpenCV</build_depend>
+  <build_depend>libopencv-dev</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>roscpp</build_depend>
@@ -49,8 +49,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
-  <build_depend>rosbag</build_depend>
-  <run_depend>OpenCV</run_depend>
+  <run_depend>libopencv-dev</run_depend>
   <run_depend>cv_bridge</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>roscpp</run_depend>
@@ -59,7 +58,6 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>visualization_msgs</run_depend>
-  <run_depend>rosbag</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
